[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["Wille Faler <wfaler@chaordic.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


duckdb = "^1.0.0"
notebook = "^7.2.1"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
jupysql = "^0.10.11"
duckdb-engine = "^0.13.0"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.5"
black = "^24.4.2"
pywatchman = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "analytics.main:main"
